--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header id="header">
         <div class="container">
             <nav class="navbar">
@@ -28,7 +27,6 @@
         </div>
     </header>
 
-    <!-- Page Hero -->
     <section class="page-hero">
         <div class="container">
             <h1>Sobre Nosotros</h1>
@@ -36,7 +34,6 @@
         </div>
     </section>
 
-    <!-- About Content -->
     <section class="about-content">
         <div class="container">
             <div class="about-grid">
@@ -82,7 +79,6 @@
         </div>
     </section>
 
-    <!-- Values Section -->
     <section class="values">
         <div class="container">
             <div class="section-title">
@@ -125,7 +121,6 @@
         </div>
     </section>
 
-    <!-- Team Section -->
     <section class="team">
         <div class="container">
             <div class="section-title">
@@ -160,7 +155,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -198,9 +192,9 @@
                 <div class="footer-column">
                     <h3>Contacto</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Dirección: San Juan, Argentina</li>
-                        <li><i class="fas fa-phone"></i> Teléfono: </li>
-                        <li><i class="fas fa-envelope"></i> Email: info@bfv.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Dirección: Caucete, San Juan</li>
+                        <li><i class="fas fa-phone"></i> WhatsApp: <a href="http://wa.link/n7fs8f" target="_blank">+54 9 264 6224495</a></li>
+                        <li><i class="fas fa-envelope"></i> Email: bfvcontacto@gmail.com</ul>
                     </ul>
                 </div>
             </div>
