--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header id="header">
         <div class="container">
             <nav class="navbar">
@@ -28,7 +27,6 @@
         </div>
     </header>
 
-    <!-- Page Hero -->
     <section class="page-hero">
         <div class="container">
             <h1>Nuestros Productos</h1>
@@ -36,10 +34,8 @@
         </div>
     </section>
 
-    <!-- Products Section -->
     <section class="products-detailed">
         <div class="container">
-            <!-- Product 1 -->
             <div class="product-detail" id="wordpress">
                 <div class="product-content">
                     <h2>Sitios Web con WordPress</h2>
@@ -106,7 +102,6 @@
                 </div>
             </div>
             
-            <!-- Product 2 -->
             <div class="product-detail" id="apps">
                 <div class="product-image">
                     <div class="image-placeholder">
@@ -173,7 +168,6 @@
                 </div>
             </div>
             
-            <!-- Product 3 -->
             <div class="product-detail" id="sistemas">
                 <div class="product-content">
                     <h2>Sistemas Personalizados</h2>
@@ -242,7 +236,6 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
     <section class="cta">
         <div class="container">
             <h2>¿No encuentras lo que buscas?</h2>
@@ -251,7 +244,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -289,9 +281,9 @@
                 <div class="footer-column">
                     <h3>Contacto</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Dirección: Ciudad, País</li>
-                        <li><i class="fas fa-phone"></i> Teléfono: +123 456 7890</li>
-                        <li><i class="fas fa-envelope"></i> Email: info@bfv.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Dirección: Caucete, San Juan</li>
+                        <li><i class="fas fa-phone"></i> WhatsApp: <a href="http://wa.link/n7fs8f" target="_blank">+54 9 264 6224495</a></li>
+                        <li><i class="fas fa-envelope"></i> Email: bfvcontacto@gmail.com</li>
                     </ul>
                 </div>
             </div>
