--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
                 
                 <div class="contact-form">
                     <h2>Envíanos un Mensaje</h2>
-                    <form id="contactForm">
+                   <form id="contactForm" action="mailto:bfvcontacto@gmail.com" method="POST" enctype="text/plain">
                         <div class="form-group">
                             <label for="name">Nombre completo</label>
                             <input type="text" id="name" name="name" required>
@@ -242,3 +242,4 @@
     <script src="js/animations.js"></script>
 </body>
 </html>
+
