--- a/Inventario.html
+++ b/Inventario.html
@@ -105,7 +105,22 @@
     </style>
 </head>
 <body>
-
+<header id="header">
+        <div class="container">
+            <nav class="navbar">
+                <a href="index.html" class="logo">BF<span>V</span></a>
+                <ul class="nav-links">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+                <div class="mobile-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!-- Contenedor Principal de la App -->
     <div class="app-container">
         <!-- Encabezado y Acciones -->
