--- a/nosotros.html
+++ b/nosotros.html
@@ -19,6 +19,7 @@
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="Inventario.html">Iniventario </a></li>
                 </ul>
                 <div class="mobile-menu">
                     <i class="fas fa-bars"></i>
@@ -188,6 +189,7 @@
     <script src="js/animations.js"></script>
 </body>
 </html>
+
 
 
 
