--- a/contacto.html
+++ b/contacto.html
@@ -87,7 +87,7 @@
                 
                 <div class="contact-form">
                     <h2>Envíanos un Mensaje</h2>
-                  <form id="contactForm" action="https://formspree.io/f/xnmryrgn">
+                 <form id="contactForm" action="https://formspree.io/f/xnmryrgn" method="POST">
                         <div class="form-group">
                             <label for="name">Nombre completo</label>
                             <input type="text" id="name" name="name" required>
@@ -243,6 +243,7 @@
     <script src="js/animations.js"></script>
 </body>
 </html>
+
 
 
 
